--- a/backend/src/MindPlus/MindPlus.Usuarios.Command/MindPlus.Command.csproj
+++ b/backend/src/MindPlus/MindPlus.Usuarios.Command/MindPlus.Command.csproj
@@ -9,6 +9,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MindPlus.Enumerado\MindPlus.Enumerado.csproj" />
+    <ProjectReference Include="..\MindPlus.Helpers\MindPlus.Helpers.csproj" />
+    <ProjectReference Include="..\MindPlus.Usuarios.Contract\MindPlus.Contract.csproj" />
+    <ProjectReference Include="..\MindPlus\MindPlus.csproj" />
   </ItemGroup>
 
 </Project>
