Conitnuidade no desenvolvimento de acordo com a arquitetura DDD

--- a/backend/src/MindPlus/MindPlus.Api.DDD/MindPlus.Api.DDD.csproj
+++ b/backend/src/MindPlus/MindPlus.Api.DDD/MindPlus.Api.DDD.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MindPlus\MindPlus.csproj" />
+  </ItemGroup>
+
 </Project>
