--- a/backend/src/MindPlus/MindPlus.QueryStore/MindPlus.QueryStore.csproj
+++ b/backend/src/MindPlus/MindPlus.QueryStore/MindPlus.QueryStore.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Empresa\" />
+    <Folder Include="Usuario\" />
+  </ItemGroup>
+
 </Project>
