--- a/backend/src/MindPlus/MindPlus.Usuarios.Contract/MindPlus.Contract.csproj
+++ b/backend/src/MindPlus/MindPlus.Usuarios.Contract/MindPlus.Contract.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MindPlus.Helpers\MindPlus.Helpers.csproj" />
+  </ItemGroup>
+
 </Project>
