--- a/backend/src/MindPlus/MindPlus.Api/MindPlus.Api.csproj
+++ b/backend/src/MindPlus/MindPlus.Api/MindPlus.Api.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Empresa\" />
+  </ItemGroup>
+
 </Project>
