Expose port do Angular

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - './frontend:/usr/src/app'
     ports:
       - '4200:4200'
+    expose:
+      - '4200'
     command: >
       bash -c "npm install && ng serve --host 0.0.0.0 --port 4200"
   db:
