--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,9 @@
     "@angular/router": "^16.0.0",
     "@floating-ui/dom": "^1.6.1",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
-    "@popperjs/core": "^2.11.6",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
