--- a/backend/src/MindPlus/MindPlus.API/MindPlus.Api.csproj
+++ b/backend/src/MindPlus/MindPlus.API/MindPlus.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,13 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Contracts\Repository\IAvaliacaoRepository.cs" />
-    <Compile Remove="Controllers\Usuario\AvaliacaoController.cs" />
+    <Compile Remove="Contracts\Repository\Avaliacao\**" />
+    <Content Remove="Contracts\Repository\Avaliacao\**" />
+    <EmbeddedResource Remove="Contracts\Repository\Avaliacao\**" />
+    <None Remove="Contracts\Repository\Avaliacao\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Contracts\Repository\Avaliacao\IAvaliacaoRepository.cs" />
-    <None Include="Controllers\Avaliacao\AvaliacaoController.cs" />
+    <None Include="Controllers\AvaliacaoController.cs" />
   </ItemGroup>
 
   <ItemGroup>
