--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "@floating-ui/dom": "^1.6.1",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.8",
+    "@types/chart.js": "^2.9.41",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
